Fix spacing on logo

--- a/app/assets/stylesheets/panamax.css.scss
+++ b/app/assets/stylesheets/panamax.css.scss
@@ -83,7 +83,7 @@ body > header nav ul li {
 
 cite.built-by {
   float: right;
-  margin-right: 15px;
+  margin: 3px 15px 13px 0;
 
   span {
     float: left;
